# makesdr

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ProtoDefs.cmake  arm-none-eabi-toolchain.cmake  linux-toolchain.cmake
src/config/: CMakeLists.txt
src/config/audio/: AudioConfig.cpp  AudioIqSourceConfig.cpp  AudioSignalIqSourceConfig.cpp  IqIoConfig.cpp
src/config/base/: ConfigBase.cpp
src/config/control/: BandSelectorBandsConfig.cpp  BandSelectorConfig.cpp  ControlConfig.cpp  DigitalInputConfig.cpp  DigitalInputsConfig.cpp  DigitalOutputConfig.cpp  DigitalOutputsConfig.cpp  FunCubeConfig.cpp  GpioInputLinesConfig.cpp  GpioLinesConfig.cpp  QtControlSinkConfig.cpp  QtControlSourceConfig.cpp  RotaryEncoderConfig.cpp
src/config/include/config/: AudioConfig.h  AudioIqSourceConfig.h  BandSelectorBandsConfig.h  ConfigBase.h  ControlConfig.h  DigitalInputConfig.h  DigitalInputsConfig.h  DigitalOutputConfig.h  DigitalOutputsConfig.h  FunCubeConfig.h  GpioInputLinesConfig.h  GpioLinesConfig.h  IqIoConfig.h  QtControlSinkConfig.h  QtControlSourceConfig.h  RadioConfig.h  ReceiverConfig.h  TransmitterConfig.h  UiConfig.h
src/config/json/: CMakeLists.txt
src/config/json/include/config/json/: AudioConfig.json.h  AudioIqSourceConfig.json.h  AudioSignalIqSourceConfig.json.h  BandSelectorBandsConfig.json.h  BandSelectorConfig.json.h  ConfigBase.json.h  ControlConfig.json.h  DigitalInputConfig.json.h  DigitalInputsConfig.json.h  DigitalOutputConfig.json.h  DigitalOutputsConfig.json.h  FunCubeConfig.json.h  GpioInputLinesConfig.json.h  GpioLinesConfig.json.h  IqIoConfig.json.h  QtControlSinkConfig.json.h  QtControlSourceConfig.json.h  RadioConfig.json.h  ReceiverConfig.json.h  RotaryEncoderConfig.json.h  TransmitterConfig.json.h  UiConfig.json.h
src/config/json/src/audio/: AudioConfig.json.cpp  AudioIqSourceConfig.json.cpp  AudioSignalIqSourceConfig.json.cpp  IqIoConfig.json.cpp
src/config/json/src/base/: ConfigBase.json.cpp
src/config/json/src/control/: BandSelectorBandsConfig.json.cpp  BandSelectorConfig.json.cpp  ControlConfig.json.cpp  DigitalInputConfig.json.cpp  DigitalInputsConfig.json.cpp  DigitalOutputConfig.json.cpp  DigitalOutputsConfig.json.cpp  FunCubeConfig.json.cpp  GpioInputLinesConfig.json.cpp  GpioLinesConfig.json.cpp  QtControlSinkConfig.json.cpp  QtControlSourceConfig.json.cpp  RotaryEncoderConfig.json.cpp
src/config/json/src/radio/: RadioConfig.json.cpp  ReceiverConfig.json.cpp  TransmitterConfig.json.cpp
src/config/json/src/ui/: UiConfig.json.cpp
src/config/radio/: RadioConfig.cpp  ReceiverConfig.cpp  TransmitterConfig.cpp
src/config/struct/: CMakeLists.txt
src/config/ui/: UiConfig.cpp
src/core/common/gpio/base/: CMakeLists.txt
src/core/common/time/: CMakeLists.txt
src/core/platform/freertos/gpio/: CMakeLists.txt
src/core/platform/freertos/thread/: CMakeLists.txt
src/core/platform/linux/gpio/: CMakeLists.txt  DigitalOutputLinesRequestGpiod.cpp  Gpiod.cpp
src/core/platform/linux/thread/: CMakeLists.txt
src/core/platform/stm32h745i/: CMakeLists.txt
src/core/platform/stm32h745i/ST/: CMakeLists.txt
src/core/platform/stm32h745i/app/: CMakeLists.txt
src/core/platform/stm32h745i/gpio/: CMakeLists.txt
src/core/platform/stm32h745i/thread/: CMakeLists.txt
src/core/platform/stm32h745i/time/: CMakeLists.txt
src/core/sys/stm32h745i/: CMakeLists.txt
src/core/sys/stm32h745i/app/: CMakeLists.txt
src/core/sys/stm32h745i/drivers/: CMakeLists.txt
src/core/sys/stm32h745i/freertos/: CMakeLists.txt
src/core/sys/stm32h745i/lvgl/: CMakeLists.txt
src/core/sys/stm32h745i/tinyusb/: CMakeLists.txt  msc_disk.c  usb_descriptors.c
src/core/thread/: CMakeLists.txt
src/core/thread/include/thread/: Mutex.h  Thread.h
src/core/thread/platform/: ThreadFreeRTOS.cpp
src/settings/control/: CMakeLists.txt
src/settings/control/base/: CMakeLists.txt
src/settings/control/factory/: CMakeLists.txt
src/settings/control/factory/src/: SettingsControlSinkFactory.cpp  SettingsControlSourceFactory.cpp
src/settings/control/hal/: CMakeLists.txt
src/settings/control/hal/FunCubeDongle/: CMakeLists.txt  FunCubeDongle.cpp  FunCubeDongle.h
src/settings/control/hal/digital/: CMakeLists.txt
src/settings/control/hal/gpio/: CMakeLists.txt
src/settings/control/hal/usb/: CMakeLists.txt
src/settings/control/qt/: CMakeLists.txt  qt.cmake
src/settings/control/qt/src/: QtGlobalControlEventTargets.cpp  QtSettingsControlSink.cpp  QtSettingsControlSource.cpp
src/settings/control/radio/: CMakeLists.txt
src/settings/control/radio/src/: RadioControl.cpp
src/settings/control/sink/: CMakeLists.txt
src/settings/control/source/: CMakeLists.txt
src/settings/control/websocket/: CMakeLists.txt
src/settings/control/websocket/src/: WebSocketControlSink.cpp  WebSocketControlSource.cpp
src/settings/model/basic/: CMakeLists.txt
src/settings/model/basic/src/: PipelineSettings.cpp
src/settings/model/core/: CMakeLists.txt
src/settings/model/core/src/: BandSettingsCache.cpp  MessageTagLookup.cpp  MessageVisitor.cpp  RadioSettings.cpp
src/settings/model/extra/: CMakeLists.txt
src/settings/model/extra/src/: ActiveBandSettings.cpp  BandCategoryList.cpp  BandList.cpp  BandSettings.cpp  BandSettingsCache.cpp  ModeList.cpp  PipelineSettings.cpp  RadioSettingsEx.cpp
src/settings/model/meta/: CMakeLists.txt
src/settings/model/meta/src/: BandCategoryList.cpp  BandList.cpp  ModeList.cpp  basicModes.cpp  generalCoverageRadioMeta.cpp  mostBandCategories.cpp
src/settings/model/mutable/: CMakeLists.txt
src/settings/model/mutable/src/: BandCategoryList.cpp  BandList.cpp  BandSettingsCache.cpp  ModeList.cpp  MutableActiveBandSettings.cpp  MutableBandSettings.cpp  MutablePipelineSettings.cpp  MutableRadioSettings.cpp  ResolvedActiveBandsFieldPaths.cpp  ResolvedActiveBandsFieldPaths.h  defaultRadioCategories.cpp
src/settings/model/proto/: CMakeLists.txt  RadioPayloads.proto  RadioSettings.options  RadioSettings.proto
src/settings/model/util/: CMakeLists.txt
src/settings/model/util/src/: GenerateResolvedPathSourceFiles.cpp  defaultRadioCategories.cpp
(+833 files in other folders)
